syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

import public "Verification.proto";

message VerificationIdentity {
    optional uint32 version = 1;
    optional string nym = 2;
    repeated Verification verification = 3;
}
