syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

import public "Verification.proto";

message VerificationSet {
    optional uint32 version = 1;
    repeated Verification internal = 2;
    repeated Verification external = 3;
}
